# zygos_db

./: .gitignore  Cargo.toml  LICENSE  README.md
python_bindings/: Cargo.toml  pyproject.toml
python_bindings/src/: lib.rs  pyo3_utils.rs
scripts/: cli.py  requirements.txt  structures.py
scripts/benchmarks/: config.py  graphs.py  graphs_parallel.py  main.py  test_base.py  test_tabix.py  test_zygos_db.py  test_zygos_db_parallel.py  util.py
src/: compression.rs  config.rs  database.rs  deserialize.rs  lib.rs  main.rs  query.rs  tsv_reader.rs
